<resources>
    <string name="app_name">Конвертация курсов валют</string>
    <string name="from">Из:</string>
    <string name="to">В:</string>
    <string name="enter_sum">Введите сумму</string>
    <string name="result">Результат конвертации</string>
    <string name="convert">Convert!</string>
    <string name="rate">Курс: 1 %1$s = %2$s %3$s</string>
    <string-array name="currencies">
        <item>RUB</item>
        <item>USD</item>
        <item>HRK</item>
        <item>JPY</item>
        <item>THB</item>
        <item>CHF</item>
        <item>EUR</item>
        <item>MYR</item>
        <item>BGN</item>
        <item>TRY</item>
        <item>CNY</item>
        <item>NOK</item>
        <item>NZD</item>
        <item>ZAR</item>
        <item>MXN</item>
        <item>SGD</item>
        <item>AUD</item>
        <item>ILS</item>
        <item>KRW</item>
        <item>PLN</item>
    </string-array>
</resources>